--- a/assets/css/layouts.css
+++ b/assets/css/layouts.css
@@ -197,7 +197,7 @@ br.clear {
     @media screen and (max-width: 736px) {
 
         .container {
-            width: 100%;
+			width: 100%;
         }
 
     }
@@ -302,11 +302,34 @@ br.clear {
 		margin-bottom: 0;
 	}
 
+	#topnav ul {
+		list-style: none;
+		padding-left: 0;
+		margin-bottom: 0;
+	}
+
 		#nav ul li {
 			padding-left: 0;
 		}
 
+		#topnav ul li {
+			padding-left: 0;
+		}
+
 			#nav ul li a {
+				display: block;
+				padding: 0.5em 1.5em 0.5em 1.5em;
+				color: rgba(255, 255, 255, 0.5);
+				text-decoration: none;
+				outline: 0;
+				border: 0;
+				-moz-transition: none;
+				-webkit-transition: none;
+				-ms-transition: none;
+				transition: none;
+			}
+
+			#topnav ul li a {
 				display: block;
 				padding: 0.5em 1.5em 0.5em 1.5em;
 				color: rgba(255, 255, 255, 0.5);
@@ -325,7 +348,22 @@ br.clear {
 					font-size: 0.8em;
 				}
 
+				#topnav ul li a span {
+					position: relative;
+					display: block;
+					font-size: 0.8em;
+				}
+
 					#nav ul li a span:before {
+						position: absolute;
+						left: 0;
+						color: #41484c;
+						text-align: center;
+						width: 1.25em;
+						line-height: 1.75em;
+					}
+
+					#topnav ul li a span:before {
 						position: absolute;
 						left: 0;
 						color: #41484c;
@@ -340,7 +378,17 @@ br.clear {
 					color: #fff;
 				}
 
+				#topnav ul li a.active {
+					background: rgba(0, 0, 0, 0.15);
+					box-shadow: inset 0 0 0.25em 0 rgba(0, 0, 0, 0.125);
+					color: #fff;
+				}
+
 					#nav ul li a.active span:before {
+						color: #e27689;
+					}
+
+					#topnav ul li a.active span:before {
 						color: #e27689;
 					}
 
@@ -438,6 +486,10 @@ br.clear {
 
 /* Wide */
 
+	#topnav {
+		visibility: hidden;
+	}
+
 	@media screen and (min-width: 961px) and (max-width: 1880px) {
 
 		/* Basic */
@@ -525,7 +577,17 @@ br.clear {
 				padding-bottom: 0.5em;
 			}
 
+			#topnav ul li a {
+				font-size: 0.8em;
+				padding-top: 0.5em;
+				padding-bottom: 0.5em;
+			}
+
 				#nav ul li a span {
+					padding-right: 2.25em;
+				}
+
+				#topnav ul li a span {
 					padding-right: 2.25em;
 				}
 
@@ -534,6 +596,14 @@ br.clear {
 						margin-left: -1.25em;
 						line-height: 2.25em;
 					}
+
+					#topnav ul li a span:before {
+						left: 100%;
+						margin-left: -1.25em;
+						line-height: 2.25em;
+					}
+
+	
 
 		/* Footer */
 
@@ -551,9 +621,9 @@ br.clear {
 
 /* Narrower */
 
-	/* #headerToggle {
+	#headerToggle {
 		display: none;
-	} */
+	}
 
 	@media screen and (max-width: 960px) {
 
@@ -594,7 +664,7 @@ br.clear {
 
 		/* Header */
 
-			#header {
+			/* #header {
 				-moz-backface-visibility: hidden;
 				-webkit-backface-visibility: hidden;
 				-ms-backface-visibility: hidden;
@@ -631,7 +701,15 @@ br.clear {
 					padding-top: 2em;
 					margin-top: 2em;
 					position: relative;
+				} */
+
+				#header{
+						visibility: hidden;
 				}
+
+				#topnav{
+						visibility: visible;
+					}
 
 			#logo {
 				margin: 1.5em 1.25em 1.25em 1.25em;
@@ -641,6 +719,10 @@ br.clear {
 				padding: 0.5em 1.25em 0.5em 1.25em;
 			}
 
+			#topnav ul li a {
+				padding: 0.5em 1.25em 0.5em 1.25em;
+			}
+/* 
 			#headerToggle {
 				-moz-backface-visibility: hidden;
 				-webkit-backface-visibility: hidden;
@@ -669,7 +751,7 @@ br.clear {
 					border: 0;
 				}
 
-					/* #headerToggle .toggle:before {
+					#headerToggle .toggle:before {
 						font-family: FontAwesome;
 						text-decoration: none;
 						font-style: normal;
@@ -749,7 +831,7 @@ br.clear {
 	@media screen and (max-width: 736px) {
 
 		/* Basic */
-		#header{
+		/* #header{
 			width: 20%;
 			display: block;
 		}
@@ -766,6 +848,14 @@ br.clear {
 
 			.container {
 				padding: 0 15px 0 15px;
+			} */
+
+		#header{
+				visibility: hidden;
+		}
+
+		#topnav{
+				visibility: visible;
 			}
 
 		/* List */
